<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="_appname">Math Thingy</string>
    <string name="_showme">Show me</string>
    <string name="_newhighscore">New high score saved...</string>
    <string name="_congratulations">Congratulations!</string>
    <string name="_score">score</string>
    <string name="_playagain">play again</string>
    <string name="_close">close</string>
    <string name="_cheeringchildren">cheering_children</string>
    <string name="_error">ERROR</string>
    <string name="_computersaysno">Computer says \'no\'</string>
    <string name="_humancalculator">Are you the human calculator?</string>
    <string name="_results">The results are in!</string>
    <string name="_topten">Did you make it into the top ten?</string>
    <string name="_hitfirstquestion">Get the first question by hitting the \'First Question\' button</string>
    <string name="_snailpace">You\'re too slow, time is up! This snail pace will cost you a life!</string>
    <string name="_nonnumerical">So sad, your answer \'%s\' is totally wrong. It\'s not even a decent number.</string>
    <string name="_wronganswer">So sad, your answer %s is wrong. It should be %s. You loose a life and the streak.</string>
    <string name="_momentum">Are you sure you want to leave now, you will lose momentum!</string>
    <string name="_correctanswer">Congratulations, your answer %s is correct</string>
    <string name="_yourscore">You scored an amazing %s points!</string>
    <string name="_streakwin">Extra congratulations to you! This is your %s %s answers win streak. You get an extra life and you receive %s * %s = %s bonus points!</string>
    <string name="_enterhighscore"><![CDATA[You ranked<big><b><font color="#000000">&nbsp;&nbsp;%1s&nbsp;&nbsp;</font></b></big>on the high score list. Enter your name and claim your place!]]></string>
    <string name="_0">0</string>
    <string name="_streakcaps">Streak</string>
    <string name="_life">Life</string>
    <string name="_3">3</string>
    <string name="_time">Time</string>
    <string name="_15">15</string>
    <string name="_question">Question</string>
    <string name="_pleaseanswerhere">Please answer here…</string>
    <string name="_submit">Submit</string>
    <string name="_next">Next</string>
    <string name="_scorecaps">Score</string>
    <string name="_blackboard">blackboard</string>
    <string name="_owlglasses">owl_glasses</string>
    <string name="_nowinnershere">There are no winners here…</string>
    <string name="_addition">additions</string>
    <string name="_subtraction">subtractions</string>
    <string name="_multiplication">multiplications</string>
    <string name="_highscores">Highscores</string>
    <string name="_exit">Exit?</string>
    <string name="_validname">(You must enter a valid name)</string>
    <string name="_yourname">Type your name here…</string>
    <string name="_message">message</string>
    <string name="_textview">TextView</string>
    <string name="_seconds">Seconds</string>
    <string name="_streaks">Streaks</string>
    <string name="_check">check</string>
    <string name="_favoperator">Pick your game here!</string>
    <string name="send">Send</string>
    <string name="cloud">cloud</string>
    <string name="tab_to_resume">(Tab to resume)</string>
    <string name="tab_to_pause">(Tab to pause)</string>
    <string name="registration_failure">Registration failure</string>
    <string name="registration_successful">Registration successful</string>
    <string name="countdown_initialtext">---</string>
    <string name="returning_in">Returning in</string>
    <string name="some_message">Some message</string>
    <string name="dummy_text">dummy text</string>
    <string name="_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="_gamemenu">Game Menu</string>
    <string name="_selectdifficulty">Select your difficulty here…</string>
    <string name="_gameprofile">Game Profile</string>
    <string name="_setupprofile">Setup your game profile…</string>
    <string name="_notregistered">Currently you are NOT registered online and you DO NOT compete in the global competition</string>
    <string name="_registered">Currently you are registered online and you compete in the global competition</string>
    <string name="_introduction">No worries, just let us know how you want to play!</string>
    <string name="_notregisteredtitle">Looking at the data it would seem that you are not registered and not connected to the global competition.</string>
    <string name="_play_anonymously">I just want to play anonymously</string>
    <string name="_play_anonymously_subtext">Sure, if you are boring and scared you can do this. You won\'t be able to humiliate other players and calculate them back to the stone age.</string>
    <string name="_play_local">I will register but I won\'t compete online</string>
    <string name="_play_local_subtext">“Just barely” <strike>could</strike> should be your motto. But at least you don\'t have to fill in your call sign with every high score, that is, if you enter your call sign.</string>
    <string name="_play_full_force">I want global domination!!</string>
    <string name="_play_full_force_subtext" tools:ignore="TypographyEllipsis">Yeah! It\'s time...for <b>GLORY</b> !  Flex the competition to a different universe with your math skills. Become the Math Magician you where destined to be!</string>
    <string name="_savegamemode">Let\'s go</string>
    <string name="_playstylesub" tools:ignore="TypographyEllipsis">Let us know how you want to play...</string>
    <string name="_regcomptitle">Registration and compete</string>
    <string name="_current_play_mode">Currently you are playing %1$s</string>
    <string name="_compete_online">Compete online</string>
    <string name="_tap_to_type">tap to type...</string>
    <string name="_name">Name</string>
    <string name="_call_sign">Call sign</string>
    <string name="_email_address">E-mail address</string>
    <string name="_notonline">You do not play online, no score here!</string>
    <string name="_offline">Don\'t want to play online anymore ??</string>
    <string name="_explanation">No worries, just uncheck <b>\"Compete online\"</b> right above me and hit <b>\"Save\"</b> below. All your online data, if any, will be deleted.\nYour local data will be save and untouched and that, of course, includes your precious <b>HIGH SCORES</b>.\nYou can go back online and compete at any time. Just check <b>\"Compete online\"</b> and hit <b>\"Save\"</b>. Soon enough you will be calculating the competition to another galaxy!.👌</string>
    <string name="_online">Why not start playing online !?</string>
    <string name="_onLineExplanation">Just check <b>\"Compete online\"</b> right above me and hit <b>\"Save\"</b> below. Your already achieved <b>HIGH SCORES</b> will be submitted to the internet and you start competing and flexing your calculation skills 🤓 immediately.\nHad enough? Just uncheck <b>\"Compete online\"</b> and hit <b>\"Save\"</b>. Your online presence will be deleted completely, your local data will <b>not</b>.🙂</string>
    <string name="_clearhighscore"><![CDATA[Are you sure you want to <big>☠️</big> the high score list?]]></string>
    <string name="_gametype">What will it be today?</string>
</resources>