<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mt_backgrnd"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/_addition" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/_subtraction" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/_multiplication" />

    <Button
        android:id="@+id/btnHighScores"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/_highscores" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/_close" />

</LinearLayout>