<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frgMainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="MAINMENU"
    tools:context=".main.MainMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/DefaultBackground"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/DefaultBackground"
            android:fontFamily="@font/atma_medium"
            android:gravity="center"
            android:text="@string/_gametype"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:drawableLeft="@drawable/addition_wrapper"
            android:fontFamily="@font/atma_medium"
            android:text="@string/_addition"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

        <View
            android:layout_width="240dp"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:background="@color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

        <Button
            android:id="@+id/btnSubtract"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/subtraction_wrapper"
            android:fontFamily="@font/atma_medium"
            android:text="@string/_subtraction"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

        <View
            android:layout_width="240dp"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:background="@color/holo_blue_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubtract" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/multiplication_wrapper"
            android:fontFamily="@font/atma_medium"
            android:text="@string/_multiplication"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubtract" />

        <Button
            android:id="@+id/btnHighScores"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/holo_blue_dark"
            android:fontFamily="@font/atma_medium"
            android:text="@string/_highscores"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMultiply" />

        <Button
            android:id="@+id/btnGoToRegistration"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/holo_blue_dark"
            android:fontFamily="@font/atma_medium"
            android:text="@string/_profile"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnHighScores" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>