<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:backgroundTint="@color/LightBlue"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
            app:layout_constraintTop_toTopOf="@+id/textViewDescription">

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/_textview"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/txtLblHighScoreTime"
                app:layout_constraintStart_toEndOf="@+id/imageRank"
                app:layout_constraintTop_toBottomOf="@+id/textViewHighScoreName"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textViewHighScoreName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_textview"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/textViewDescription"
                app:layout_constraintEnd_toStartOf="@+id/txtLblHighScore"
                app:layout_constraintStart_toEndOf="@+id/imageRank"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageRank"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="17dp"
                android:contentDescription="@string/_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/check"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/txtHighScore"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="29dp"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textColor="@color/ForestGreen"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtHighScoreStreaks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtHighScoreTime"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="29dp"
                android:layout_marginBottom="10dp"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textColor="@color/Chocolate"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHighScoreStreaks"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/txtHighScoreStreaks"
                android:layout_width="38dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="29dp"
                android:text="@string/_0"
                android:textAlignment="textEnd"
                android:textColor="@color/BlueViolet"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtHighScoreTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHighScore" />

            <TextView
                android:id="@+id/txtLblHighScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="2dp"
                android:text="@string/_scorecaps"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtLblHighScoreStreaks"
                app:layout_constraintEnd_toStartOf="@+id/txtHighScore"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtLblHighScoreStreaks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/_streaks"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtLblHighScoreTime"
                app:layout_constraintEnd_toStartOf="@+id/txtHighScoreStreaks"
                app:layout_constraintTop_toBottomOf="@+id/txtLblHighScore" />

            <TextView
                android:id="@+id/txtLblHighScoreTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="10dp"
                android:text="@string/_seconds"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txtHighScoreTime"
                app:layout_constraintTop_toBottomOf="@+id/txtLblHighScoreStreaks" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>